# sharad

./: .gitignore  Cargo.toml  README.md  TODO.md  build.sh
src/: assistant.rs  audio.rs  display.rs  error.rs  image.rs  main.rs  menu.rs  settings.rs  utils.rs
