[package]
name = "sharad"
version = "0.5.6"
authors = ["Roland Haller <haller.roland@gmail.com>"]
edition = "2021"


[dependencies]
async-openai = "0.23.1"
bytes = "1.6.0"
chrono = "0.4.38"
colored = "2.1.0"
cpal = "0.15.3"
crossterm = { version = "0.27.0", features = ["event-stream"] }
ctrlc = "3.4.4"
dasp = "0.11.0"
dotenv = "0.15.0"
futures = "0.3.30"
hound = "3.5.1"
lazy_static = "1.4.0"
once_cell = "1.19.0"
record-audio = "0.1.1"
reqwest = { version = "0.12.4", features = ["json"] }
rodio = "0.18.1"
rpassword = "7.3.1"
rustix = "0.38.34"
rustyline = "14.0.0"
self_update = "0.40.0"
semver = "1.0.23"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sys = "0.0.1"
term_size = "0.3.2"
textwrap = "0.16.1"
tokio = { version = "1.38.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
unicode-segmentation = "1.11.0"
unicode-width = "0.1.13"
uuid = { version = "1.8.0", features = ["v4"] }
